k8s/linkerd-multi-cluster/test/podinfo-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-lb
  namespace: test
spec:
  ports:
  - name: http
    port: 9898
    protocol: TCP
    targetPort: http
  - name: grpc
    port: 9999
    protocol: TCP
    targetPort: grpc
  selector:
    app: podinfo
  type: LoadBalancer
